[package]
name = "hello"
version = "0.1.0"
authors = ["Ivan Tham <pickfire@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
dotenv = "0.15.0"
